added pg node scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon app.js"
+    "start": "npx nodemon app.js",
+    "resetdb": "npm run dropdb && npm run setupdb",
+    "setupdb": "npm run createdb && npm run loadschema",
+    "createdb": "createdb requestbin",
+    "dropdb": "dropdb requestbin", 
+    "loadschema": "psql -d requestbin < schema.sql"
   },
   "author": "",
   "license": "ISC",
