--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "resetdb": "npm run dropdb && npm run setupdb",
     "setupdb": "npm run createdb && npm run loadschema && npm run loadseeddata",
     "createdb": "createdb requestbin",
-    "dropdb": "dropdb requestbin", 
+    "dropdb": "dropdb requestbin",
     "loadschema": "psql -d requestbin < schema.sql",
     "loadseeddata": "psql -d requestbin < seedData.sql"
   },
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "short-uuid": "^5.2.0"
   }
 }
