--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.16.0",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6",
+    "postgres": "^3.4.5",
     "short-uuid": "^5.2.0"
   }
 }
